[FIX] web_editor: add missing variables for dark mode
This commit adds missing colors for the Powerbox scrollbar in dark mode.

closes odoo/odoo#103893

--- a/addons/web_editor/static/src/scss/odoo-editor/powerbox.dark.scss
+++ b/addons/web_editor/static/src/scss/odoo-editor/powerbox.dark.scss
@@ -13,4 +13,7 @@
 
     --oePowerbox__commandImg-bg: #{$o-gray-400};
     --oePowerbox__commandImg-color: #{$o-gray-900};
+
+    --oePowerbox__ScrollbarThumb-background-color: #{$o-gray-400};
+    --oePowerbox__ScrollbarTrack-background-color: #{$o-gray-200};
 }
